<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">MonTransit</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="nearby">Nearby</string>
    <string name="map">Map</string>
    <string name="trip_planner">Trip Planner</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="feedback_email">Send Feedback</string>
    <string name="rate_review">Review App</string>
    <string name="support">Support MonTransit</string>
    <string name="send_feedback_email">mtransit.apps+InApp@gmail.com</string>
    <string name="menu_action_nearby">Nearby</string>
    <string name="menu_action_search">Search</string>
    <string name="search_hint">Search MonTransit</string>
    <string name="search_no_result_for_and_query">No results for %s</string>
    <string name="all">All</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="agency_type_ferry_short_name">Ferry</string>
    <string name="agency_type_ferry_all">Ferries</string>
    <string name="agency_type_ferry_stations_short_name">Ferries Stations</string>
    <string name="agency_type_ferry_nearby">Nearby Stations</string>
    <string name="agency_type_light_rail_short_name">Streetcar</string>
    <string name="agency_type_light_rail_all">Streetcars</string>
    <string name="agency_type_light_rail_stations_short_name">Streetcars Stops</string>
    <string name="agency_type_light_rail_nearby">Nearby Stops</string>
    <string name="agency_type_subway_short_name">Subway</string>
    <string name="agency_type_subway_all">Subways</string>
    <string name="agency_type_subway_stations_short_name">Subway Stations</string>
    <string name="agency_type_subway_nearby">Nearby Stations</string>
    <string name="agency_type_rail_short_name">Train</string>
    <string name="agency_type_rail_all">Trains</string>
    <string name="agency_type_rail_stations_short_name">Train Stations</string>
    <string name="agency_type_rail_nearby">Nearby Stations</string>
    <string name="agency_type_bus_short_name">Bus</string>
    <string name="agency_type_bus_all">Buses</string>
    <string name="agency_type_bus_stops_short_name">Bus Stops</string>
    <string name="agency_type_bus_nearby">Nearby Stops</string>
    <string name="agency_type_bike_short_name">Bike</string>
    <string name="agency_type_bike_all">Bikes</string>
    <string name="agency_type_bike_stations_short_name">Bike Stations</string>
    <string name="agency_type_bike_nearby">Nearby Stations</string>
    <string name="agency_type_place_short_name">Place</string>
    <string name="agency_type_place_all">Places</string>
    <string name="agency_type_place_app_short_name">Places</string>
    <string name="agency_type_place_nearby">Nearby Places</string>
    <string name="agency_type_module_short_name">+</string>
    <string name="agency_type_module_all">Agencies</string>
    <string name="agency_type_module_app_short_name">Agencies</string>
    <string name="agency_type_module_nearby">Nearby Agencies</string>
    <string name="email">E-mail</string>
    <string name="tel">Phone Number</string>
    <string name="file">File</string>
    <string name="video">Video</string>
    <string name="facebook">Facebook</string>
    <string name="google_maps">Google Maps</string>
    <string name="twitter">Twitter</string>
    <string name="download_on_store">Download on Google Play</string>
    <string name="re_enable_app">Enable to resolve issue</string>
    <string name="rate_on_store">Rate on Google Play</string>
    <string name="manage_app">App Management</string>
    <string name="uninstall">Uninstall</string>
    <string name="view_details">View Details</string>
    <string name="news_shared_on_and_author_and_source">%1$s on %2$s</string>
    <string name="no_news">No news.</string>
    <string name="latest_news">Latest News</string>
    <string name="no_favorites">No favorites.</string>
    <string name="favorite_removed">Favorite removed.</string>
    <string name="favorite_removed_to_folder_and_folder">Favorite removed from %s.</string>
    <string name="favorite_moved">Favorite moved.</string>
    <string name="favorite_moved_to_folder_and_folder">Favorite moved to %s.</string>
    <string name="favorite_added">Favorite added.</string>
    <string name="favorite_added_to_folder_and_folder">Favorite added to %s.</string>
    <string name="favorite_remove">- Remove from favorites</string>
    <string name="favorite_folder_new">+ New folder</string>
    <string name="favorite_folder_name_hint">Folder name</string>
    <string name="favorite_folder_new_create">Create folder</string>
    <string name="favorite_folder_edit">Rename folder</string>
    <string name="favorite_folder_new_cancel">Cancel</string>
    <string name="favorite_folder_new_invalid_name">Invalid folder name!</string>
    <string name="favorite_folder_new_creation_error_and_folder_name">Error while creating folder %s!</string>
    <string name="favorite_folder_new_created_and_folder_name">Folder %s created.</string>
    <string name="favorite_folder_deletion_error_and_folder_name">Error while deleting folder %s!</string>
    <string name="favorite_folder_deleted_and_folder_name">Folder %s deleted.</string>
    <string name="favorite_folder_deletion_confirmation_title_and_name">Delete %s?</string>
    <string name="favorite_folder_deletion_confirmation_text_and_name">Are you sure you want to delete the favorite folder %s?</string>
    <string name="favorite_folder_edited">Folder renamed.</string>
    <string name="favorite_folder_edited_and_folder">Folder renamed to %s.</string>
    <string name="favorite_folder_empty">(empty)</string>
    <string name="favorite_folder_pick">Select folder</string>
    <string name="favorite_folder_pick_ok">OK</string>
    <string name="favorite_folder_pick_cancel">Cancel</string>
    <string name="favorite_folder_default">(default)</string>
    <string name="new_location_toast">New location. Touch to refresh.</string>
    <string name="no_results">No Results</string>
    <string name="world_explored">Planetary exploration completed</string>
    <string name="module_label">+</string>
    <string name="module_short_name">+</string>
    <string name="place_label">Places</string>
    <string name="place_short_name">Places</string>
    <string name="view_stop">View stop</string>
    <string name="view_stop_route">View stop route</string>
    <string name="view_stop_route_and_route">View route %s</string>
    <string name="add_fav">Add to favorites</string>
    <string name="remove_fav">Remove from favorites</string>
    <string name="edit_fav">Move/Remove favorite</string>
    <string name="menu_action_list">List</string>
    <string name="menu_action_grid">Grid</string>
    <string name="menu_action_map">Map</string>
    <string name="menu_action_favorite_folder_new">Create new favorite folder</string>
    <string name="menu_action_www">Open Web Browser</string>
    <string name="menu_action_filter">Filter</string>
    <string name="menu_action_show_directions">Directions</string>
    <string name="menu_action_add_favorite">Add to favorites</string>
    <string name="menu_action_remove_favorite">Remove from favorites</string>
    <string name="menu_action_edit_favorite">Edit favorite</string>
    <string name="next_departures">Next Departures</string>
    <string name="availability">Availability</string>
    <string name="full_schedule">Full Schedule</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="local_time_and_time">%s local time</string>
    <string name="battery_optimization_issue_title">Battery optimization issues</string>
    <string name="battery_optimization_issue_message">Device manufacturers (Huawei, OnePlus, Nokia, Xiaomi, Meizu&#8230;) are changing the way Android works to save more battery and it\'s breaking apps.\n\nLearn more at https://dontkillmyapp.com/.</string>
    <string name="battery_optimization_issue_act">Fix</string>
    <string name="battery_optimization_issue_learn_more">Learn more</string>
    <string name="display_pref_cat_title">Display</string>
    <string name="unit_pref_title">Units</string>
    <string name="unit_pref_summary">Metric(km/m) or Imperial(mi/ft).</string>
    <string name="unit_pref_dialog_title">Units</string>
    <string name="unit_pref_meter">Metric (km/m)</string>
    <string name="unit_pref_imperial">Imperial (mi/ft)</string>
    <string name="use_internal_web_browser_pref_title">Use Internal Web Browser</string>
    <string name="use_internal_web_browser_pref_summary">Open links in the internal web browser instead of the default web browser</string>
    <string name="use_internal_web_browser_pref_summary_on">Open links in the internal web browser</string>
    <string name="use_internal_web_browser_pref_summary_off">Open links in the default web browser</string>
    <string name="device_settings_pref_cat_title">Device</string>
    <string name="device_settings_language_pref_title">Language</string>
    <string name="device_settings_language_pref_summary">The app user interface automatically adjusts to the device language</string>
    <string name="device_settings_date_and_time_pref_title">Date and time</string>
    <string name="device_settings_date_and_time_pref_summary">Select 12/24 hour format and make sure the device date, time and timezone are set correctly</string>
    <string name="device_settings_location_pref_title">Location</string>
    <string name="device_settings_location_pref_summary">Improve the device location detection accuracy</string>
    <string name="device_settings_power_management_pref_title">Power Management</string>
    <string name="device_settings_power_management_pref_summary">Solve issues with device manufacturers aggressive battery optimizations</string>
    <string name="feedback_pref_cat_title">Feedback</string>
    <string name="feedback_email_pref_title">Send Feedback</string>
    <string name="feedback_email_pref_summary">Report an issue or suggest a new feature.</string>
    <string name="feedback_store_pref_title">Review on Google Play</string>
    <string name="feedback_store_pref_summary">Leave a review on the Google Play Store</string>
    <string name="social_pref_cat_title">Social</string>
    <string name="social_facebook_pref_title">Like MonTransit on Facebook</string>
    <string name="social_facebook_pref_summary">facebook.com/MonTransit</string>
    <string name="social_twitter_pref_title">Follow MonTransit on Twitter</string>
    <string name="social_twitter_pref_summary">twitter.com/MonTransit</string>
    <string name="about_pref_cat_title">About</string>
    <string name="about_privacy_policy_pref_title">@string/privacy_policy</string>
    <string name="about_privacy_policy_pref_summary">Read the app\'s privacy policy</string>
    <string name="about_app_version_pref_title">Application version</string>
    <string name="about_app_version_pref_summary">@string/ellipsis</string>
    <string name="support_pref_cat_title">Support</string>
    <string name="support_subs_pref_title">Support MonTransit</string>
    <string name="support_subs_pref_summary">Hide ads and support MonTransit development.</string>
    <string name="support_subs_cancel_pref_title">Thanks for supporting MonTransit!</string>
    <string name="support_subs_cancel_pref_summary">Cancel anytime.</string>
    <string name="support_subs_pick_price">Pick your price ;)</string>
    <string name="support_subs_try_cancel">(1 month free, cancel anytime)</string>
    <string name="support_subs_buy_with_play">Buy with Google Play</string>
</resources>