<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.mtransit.android.MainActivity">
    <item
        android:id="@+id/menu_add_remove_favorite"
        android:icon="@drawable/ic_action_star_border_dark"
        android:title="@string/menu_action_edit_favorite"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_action_star_dark"
        tools:title="@string/menu_action_remove_favorite"
        tools:visible="true" />
    <item
        android:id="@+id/menu_show_directions"
        android:icon="@drawable/ic_action_directions_dark"
        android:title="@string/menu_action_show_directions"
        app:showAsAction="ifRoom" />
</menu>