<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:minHeight="?android:attr/listPreferredItemHeightLarge"
    android:minWidth="?android:attr/listPreferredItemHeightLarge" >
    <LinearLayout
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:orientation="vertical"
        android:padding="16dp" >
        <include
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/layout_loading_large"
            android:visibility="gone" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/support_subs_pref_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/support_subs_pref_summary"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/beforeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/support_subs_pick_price"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />
        <LinearLayout
            android:id="@+id/priceSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Spinner
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:visibility="visible"
                tools:context=".ui.MainActivity"
                tools:listitem="@android:layout/simple_spinner_dropdown_item"
                tools:visibility="visible" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" / " />
            <Spinner
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:visibility="visible"
                tools:context=".ui.MainActivity"
                tools:listitem="@android:layout/simple_spinner_dropdown_item"
                tools:visibility="visible" />
        </LinearLayout>
        <TextView
            android:id="@+id/afterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/support_subs_try_cancel"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Button
            android:id="@+id/buyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_subs_buy_with_play" />
    </LinearLayout>
</ScrollView>